--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.51"
   },
