--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 EXPIRES_AT=EXPIRES_AT
 USER_DIR=/public/users
+HOST=http://localhost:3000
 
 MAILER_EMAIL=MAILER_EMAIL
 MAILER_PASSWORD=MAILER_PASSWORD
