--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,8 @@
-EXPIRES_AT=EXPIRES_AT
-USER_DIR=/public/users
-HOST=http://localhost:3000
+SMTP_EMAIL='SMTP_EMAIL'
+SMTP_PASSWORD='SMTP_PASSWORD'
 
-MAILER_EMAIL=MAILER_EMAIL
-MAILER_PASSWORD=MAILER_PASSWORD
+GITHUB_CLIENT_ID='GITHUB_CLIENT_ID'
+GITHUB_CLIENT_SECRET='GITHUB_CLIENT_SECRET'
 
-GITHUB_CLIENT_ID=GITHUB_CLIENT_ID
-GITHUB_CLIENT_SECRET=GITHUB_CLIENT_SECRET
-
-AUTH_SECRET=h64gXjtU+0Hg52Zr0lb0WzbfiQkGU0xJBCSr85+YCvs=
-DATABASE_URL=mongodb://user:password@localhost:27017/db?authSource=auth-db
+AUTH_SECRET='h64gXjtU+0Hg52Zr0lb0WzbfiQkGU0xJBCSr85+YCvs='
+DATABASE_URL='mongodb://user:password@localhost:27017/db?authSource=auth-db'
