--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-table": "^8.21.3",
-    "bcryptjs": "^3.0.2",
+    "bcrypt-mini": "^1.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
