--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "lodash": "^4.17.21",
     "lucide-react": "^0.513.0",
+    "moderndash": "^4.0.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
@@ -62,7 +62,6 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
-    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
