--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
+    "mime": "^4.0.7",
     "moderndash": "^4.0.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
