--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "lucide-react": "^0.513.0",
     "mime": "^4.0.7",
     "moderndash": "^4.0.0",
-    "next": "15.3.3",
+    "next": "15.5.2",
     "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
-    "react": "^19.0.0",
+    "react": "19.1.1",
     "react-day-picker": "^9.8.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.60.0",
     "recharts": "^3.0.0",
     "sonner": "^2.0.5",
@@ -65,15 +65,19 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3",
+    "eslint-config-next": "15.5.2",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
     "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9"
   }
 }
