--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "recharts": "^3.0.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
+    "use-debounce": "^10.0.6",
     "vaul": "^1.1.2",
     "zod": "^3.25.76"
   },
