--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 SMTP_EMAIL='SMTP_EMAIL'
+AUTH_SECRET='AUTH_SECRET'
 SMTP_PASSWORD='SMTP_PASSWORD'
 
 GITHUB_CLIENT_ID='GITHUB_CLIENT_ID'
 GITHUB_CLIENT_SECRET='GITHUB_CLIENT_SECRET'
 
-AUTH_SECRET='h64gXjtU+0Hg52Zr0lb0WzbfiQkGU0xJBCSr85+YCvs='
+MONGO_EXPORT_DIR='EXPORT_DIRECTORY_LOCATION'
+MONGO_IMPORT_DIR='EXPORT_DIRECTORY_LOCATION'
 DATABASE_URL='mongodb://user:password@localhost:27017/db?authSource=auth-db'
