--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "html-to-image": "^1.11.13",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.513.0",
