--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@tabler/icons-react": "^3.34.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-table": "^8.21.3",
     "bcrypt-mini": "^1.0.1",
     "class-variance-authority": "^0.7.1",
@@ -55,6 +56,7 @@
     "moderndash": "^4.0.0",
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.28",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "react": "19.1.1",
