--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.1",
     "react-hook-form": "^7.60.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.0.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "use-debounce": "^10.0.6",
