--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
   "singleQuote": true,
+  "jsxSingleQuote": true,
   "arrowParens": "avoid",
   "trailingComma": "none",
   "plugins": ["prettier-plugin-tailwindcss"]
