--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "dotenv": "^17.2.3",
     "html-to-image": "^1.11.13",
     "jspdf": "^3.0.3",
-    "lucide-react": "^0.513.0",
+    "lucide-react": "^0.562.0",
     "mime": "^4.0.7",
     "moderndash": "^4.0.0",
     "next": "16.1.1",
@@ -59,6 +59,7 @@
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.2.3",
@@ -68,7 +69,7 @@
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.0.6",
     "vaul": "^1.1.2",
     "zod": "^4.0.0"
