--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbopack",
-    "lint": "next lint",
+    "lint": "eslint .",
     "mongo:export": "node scripts/export.js",
     "mongo:import": "node scripts/import.js",
     "print:env": "dotenv -- printenv",
@@ -75,17 +75,17 @@
     "zod": "^4.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/eslint": "^9.6.1",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "dotenv-cli": "^11.0.0",
-    "eslint": "^9",
+    "eslint": "^9.39.2",
     "eslint-config-next": "16.1.1",
-    "eslint-plugin-perfectionist": "^5.0.0",
+    "eslint-plugin-perfectionist": "^5.2.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
     "prisma": "^6.9.0",
