Update .prettierrc configuration

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "jsxSingleQuote": true,
   "arrowParens": "avoid",
   "trailingComma": "none",
+  "bracketSameLine": true,
   "objectWrap": "collapse",
   "plugins": ["prettier-plugin-tailwindcss"]
 }
